[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 341.0
margin_bottom = 200.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 136.0
custom_constants/separation = 12

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
margin_right = 78.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( -280, -8 )
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 78.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -280, -8 )
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 78.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -280, -8 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
